--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/logo.webp" />
+    <link rel="icon" type="image/svg+xml" href="/public/modern-worldspeak-globe-hat-circle-logo-design-modern-worldspeak-globe-hat-circle-logo-design-vector-illustration-suitable-236604173.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feel Good Yoga</title>
+    <title>WorldSpeak</title>
   </head>
   <body>
     <div id="root"></div>
